--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -68,13 +68,34 @@
         android:layout_below="@+id/teamColorTV"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/teamColorEnterText"
+        android:text="Robot Position"
+        android:id="@+id/robotPositionTextView"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentLeft="true"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/robotPositionTextView"
+        android:id="@+id/robotPositionEditText"
+        android:layout_alignParentRight="true"
+        android:hint="Robot Positon"
+        android:inputType="number"
+        android:ems="10" />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceMedium"
         android:text="Auto Gear Success"
         android:id="@+id/autoGearSuccessTV"
-        android:layout_below="@+id/teamColorEnterText"
+        android:layout_below="@+id/robotPositionEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
     <EditText
@@ -178,7 +199,7 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/tbhEnterText"
-        android:hint="THB"
+        android:hint="TBH"
         android:layout_below="@+id/tbhTV"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
