--- a/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
@@ -60,7 +60,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/RightStartPeg"
+        android:id="@+id/rightStartPeg"
         android:text="Right Peg"
         android:textSize="25sp"
         android:buttonTint="#4169e1"
