--- a/app/src/main/res/layout/data_list.xml
+++ b/app/src/main/res/layout/data_list.xml
@@ -31,7 +31,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Robot Position "
-        android:layout_below="@+id/teamColorTextView"
+        android:layout_below="@+id/matchNumberTextView"
+        android:layout_toRightOf="@+id/teamColorTextView"
         android:id="@+id/robotPositionTV"/>
 
     <TextView
