--- a/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
@@ -109,4 +109,13 @@
         android:layout_alignStart="@+id/matchNumberEditText"
         android:layout_marginTop="51dp" />
 
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Team Number"
+        android:id="@+id/autoCompTeamNumberTextView"
+        android:layout_above="@+id/startScoutingButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
