--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -35,49 +35,45 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
         android:text="Scout"
+        android:textSize="10dp"
         android:id="@+id/scoutButton"
         android:drawableLeft="@android:drawable/ic_menu_agenda"
         android:layout_below="@+id/searchButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/uploadData"
-        android:layout_alignEnd="@+id/uploadData" />
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
         android:text="Upload"
+        android:textSize="10dp"
         android:id="@+id/uploadData"
         android:drawableLeft="@android:drawable/ic_menu_upload"
         android:layout_below="@+id/scoutButton"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/teamsView"
-        android:layout_alignEnd="@+id/teamsView" />
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
         android:text="Teams"
+        android:textSize="10dp"
         android:id="@+id/teamsView"
         android:drawableLeft="@drawable/ic_action_ppl"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/uploadData"
-        android:layout_alignRight="@+id/addPhoto"
-        android:layout_alignEnd="@+id/addPhoto" />
+        android:layout_below="@+id/uploadData" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
         android:text="Add Photo"
+        android:textSize="10dp"
         android:id="@+id/addPhoto"
         android:drawableLeft="@android:drawable/ic_menu_camera"
         android:layout_below="@+id/teamsView"
-        android:layout_alignRight="@+id/viewPhoto"
-        android:layout_alignEnd="@+id/viewPhoto"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:clickable="true"
@@ -85,9 +81,10 @@
         android:focusableInTouchMode="false" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="95dp"
+        android:layout_height="50dp"
         android:text="View Photos"
+        android:textSize="10dp"
         android:id="@+id/viewPhoto"
         android:drawableLeft="@android:drawable/ic_menu_gallery"
         android:layout_alignParentLeft="true"
