Pulling Match Schedules
So now it pulls the matchSchedule from
http://gorohi.com/1323/test/index.php and saves it into its own
database. Now just have to work on getting the editText to suggest the
teams base on teamColor and matchNumber.

--- a/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
@@ -86,6 +86,17 @@
         android:textSize="40sp"
         android:paddingRight="15dp"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:text="Import Schedule"
+        android:id="@+id/importScheduleButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="30dp"
+        android:paddingLeft="15dp"/>
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
