--- a/app/src/main/res/layout-land/activity_scouting_menu.xml
+++ b/app/src/main/res/layout-land/activity_scouting_menu.xml
@@ -22,18 +22,18 @@
         android:layout_toLeftOf="@+id/teamNumberEditText"
         android:textSize="25sp"/>
 
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/teamNumberEditText"
+        android:id="@+id/teamNumberAutoEditText"
         android:hint="Ex. 1323"
-        android:elegantTextHeight="false"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
+    <requestFocus />
 
     <TextView
         android:layout_width="150dp"
@@ -41,7 +41,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Match Number:"
         android:id="@+id/matchNumberTextView"
-        android:layout_below="@+id/teamNumberEditText"
+        android:layout_below="@+id/teamNumberAutoEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="25sp"
@@ -58,8 +58,8 @@
         android:hint="Ex. 12"
         android:textSize="25sp"
         android:layout_alignTop="@+id/matchNumberTextView"
-        android:layout_alignLeft="@+id/teamNumberEditText"
-        android:layout_alignStart="@+id/teamNumberEditText" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="150dp"
@@ -81,17 +81,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/matchNumberEditText"
         android:layout_alignEnd="@+id/matchNumberEditText" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Import Schedule"
-        android:id="@+id/importScheduleButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="25dp"
-        android:paddingLeft="15dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
