--- a/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_scouting_menu.xml
@@ -18,23 +18,24 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/teamNumberEditText"
-        android:layout_toLeftOf="@+id/teamNumberEditText"
+        android:layout_toStartOf="@+id/teamNumberAutoEditText"
+        android:layout_toLeftOf="@+id/teamNumberAutoEditText"
         android:textSize="40sp"
         android:paddingTop="5dp"/>
 
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/teamNumberEditText"
+        android:id="@+id/teamNumberAutoEditText"
         android:hint="Ex. 1323"
         android:elegantTextHeight="false"
         android:textSize="40sp"
         android:layout_below="@+id/teamNumberTextView"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
+    <requestFocus />
 
     <TextView
         android:layout_width="150dp"
@@ -42,7 +43,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Match Number:"
         android:id="@+id/matchNumberTextView"
-        android:layout_below="@+id/teamNumberEditText"
+        android:layout_below="@+id/teamNumberAutoEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="40sp"
@@ -59,8 +60,8 @@
         android:hint="Ex. 12"
         android:textSize="40sp"
         android:layout_below="@+id/matchNumberTextView"
-        android:layout_alignLeft="@+id/teamNumberEditText"
-        android:layout_alignStart="@+id/teamNumberEditText" />
+        android:layout_alignLeft="@+id/teamNumberAutoEditText"
+        android:layout_alignStart="@+id/teamNumberAutoEditText" />
 
     <TextView
         android:layout_width="150dp"
@@ -86,16 +87,6 @@
         android:textSize="40sp"
         android:paddingRight="15dp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="Import Schedule"
-        android:id="@+id/importScheduleButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="30dp"
-        android:paddingLeft="15dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
