--- a/app/src/main/res/layout-xlarge/activity_start_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_start_menu.xml
@@ -92,32 +92,16 @@
         android:drawableStart="@android:drawable/ic_menu_gallery"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"/>
-    
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:text="3v3"
-        android:id="@+id/threeVThree"
-        android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/scoutButton"/>
-    
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:text="Team Data"
-        android:id="@+id/teamData"
-        android:layout_below="@+id/threeVThree"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"/>
 
     <Button
         android:layout_width="150dp"
         android:layout_height="70dp"
-        android:text="Pick List"
-        android:id="@+id/pickList"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/threeVThree"
-        android:layout_marginRight="10dp"/>
+        android:text="Import Schedule"
+        android:id="@+id/importScheduleButton"
+        android:layout_below="@+id/viewPhoto"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"/>
 </RelativeLayout>
 </ScrollView>
